--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "session-desktop",
   "productName": "Session",
   "description": "Private messaging from your desktop",
-  "version": "1.6.4",
+  "version": "1.6.5",
   "license": "GPL-3.0",
   "author": {
     "name": "Loki Project",
@@ -14,7 +14,9 @@
   },
   "main": "main.js",
   "scripts": {
-    "postinstall": "electron-builder install-app-deps && rimraf node_modules/dtrace-provider && husky install",
+    "prepare": "patch-package",
+    "postinstall": "yarn custom-react-mentions-build && electron-builder install-app-deps && rimraf node_modules/dtrace-provider && husky install",
+    "custom-react-mentions-build": "cd node_modules/react-mentions && yarn install --node_modules=../node_modules && yarn build && rimraf node_modules/react node_modules/react-dom && cd ..",
     "start": "cross-env NODE_APP_INSTANCE=$MULTI electron .",
     "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
     "start-swarm-test": "cross-env NODE_ENV=swarm-testing NODE_APP_INSTANCE=$MULTI electron .",
@@ -33,7 +35,6 @@
     "test-electron": "yarn grunt test",
     "test-integration": "ELECTRON_DISABLE_SANDBOX=1 mocha --exit --full-trace --timeout 10000 ts/test/session/integration/integration_itest.js",
     "test-node": "mocha --recursive --exit --timeout 10000  test/app test/modules \"./ts/test/**/*_test.js\" ",
-    "test-audric": "mocha --recursive --exit --timeout 500  test/app test/modules \"./ts/test/session/unit/onion/*.js\" ",
     "eslint-full": "eslint . --cache",
     "lint-full": "yarn format-full && yarn lint-files-full",
     "lint-files-full": "yarn eslint-full && yarn tslint",
@@ -41,7 +42,7 @@
     "format-full": "prettier --list-different --write \"*.{css,js,json,scss,ts,tsx}\" \"./**/*.{css,js,json,scss,ts,tsx}\"",
     "transpile": "tsc --incremental",
     "transpile:watch": "tsc -w",
-    "clean-transpile": "rimraf ts/**/*.js ts/*.js ts/*.js.map ts/**/*.js.map && rimraf tsconfig.tsbuildinfo;",
+    "clean-transpile": "rimraf ts/**/*.js && rimraf ts/*.js && rimraf tsconfig.tsbuildinfo;",
     "ready": "yarn clean-transpile; yarn grunt && yarn lint-full && yarn test"
   },
   "dependencies": {
@@ -76,7 +77,7 @@
     "jquery": "3.3.1",
     "jsbn": "1.1.0",
     "libsodium-wrappers": "^0.7.8",
-    "linkify-it": "3.0.2",
+    "linkify-it": "2.0.3",
     "lodash": "4.17.11",
     "long": "^4.0.0",
     "mic-recorder-to-mp3": "^2.2.2",
@@ -97,7 +98,7 @@
     "react-emoji-render": "^1.2.4",
     "react-h5-audio-player": "^3.2.0",
     "react-intersection-observer": "^8.30.3",
-    "react-mentions": "^4.2.0",
+    "react-mentions": "https://github.com/Bilb/react-mentions",
     "react-portal": "^4.2.0",
     "react-qr-svg": "^2.2.1",
     "react-redux": "7.2.1",
@@ -125,7 +126,7 @@
     "@types/blueimp-load-image": "^2.23.8",
     "@types/buffer-crc32": "^0.2.0",
     "@types/bytebuffer": "^5.0.41",
-    "@types/chai": "^4.2.18",
+    "@types/chai": "4.1.2",
     "@types/chai-as-promised": "^7.1.2",
     "@types/classnames": "2.2.3",
     "@types/color": "^3.0.0",
@@ -148,7 +149,7 @@
     "@types/rc-slider": "^8.6.5",
     "@types/react": "16.8.5",
     "@types/react-dom": "16.8.2",
-    "@types/react-mentions": "^4.1.1",
+    "@types/react-mentions": "^3.3.1",
     "@types/react-mic": "^12.4.1",
     "@types/react-portal": "^4.0.2",
     "@types/react-redux": "7.1.9",
@@ -163,7 +164,7 @@
     "arraybuffer-loader": "1.0.3",
     "asar": "0.14.0",
     "bower": "1.8.2",
-    "chai": "4.3.4",
+    "chai": "4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-bytes": "^0.1.2",
     "css-loader": "^3.6.0",
@@ -194,6 +195,7 @@
     "node-gyp": "3.8.0",
     "node-sass-import-once": "1.2.0",
     "nyc": "11.4.1",
+    "patch-package": "^6.2.2",
     "postinstall-prepare": "^1.0.1",
     "prettier": "1.19.0",
     "qs": "6.5.1",
