build binaries on pr to clearnet or master

--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -6,6 +6,10 @@ on:
     branches:
       - master
       - clearnet
+  pull_request:
+    branches:
+      - master
+      - clearnet
 
 jobs:
   build:
