remove unused crypto marking us as coinminer
hopefully

--- a/bower.json
+++ b/bower.json
@@ -30,9 +30,7 @@
       "node_modules/mustache/mustache.js",
       "node_modules/underscore/underscore.js",
       "node_modules/backbone/backbone.js",
-      "components/indexeddb-backbonejs-adapter/**/*.js",
-      "components/qrcode/**/*.js",
-      "components/multibase/dist/index.js"
+      "components/indexeddb-backbonejs-adapter/**/*.js"
     ],
     "libtextsecure": [
       "node_modules/long/dist/long.js",
@@ -40,8 +38,7 @@
     ],
     "libloki": [
       "node_modules/long/dist/long.js",
-      "components/JSBI/dist/jsbi.mjs",
-      "components/multibase/dist/index.js"
+      "components/JSBI/dist/jsbi.mjs"
     ]
   }
 }
