--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "fs-extra": "9.0.0",
     "glob": "7.1.2",
     "he": "1.2.0",
-    "ip2country": "^1.0.0",
+    "ip2country": "1.0.1",
     "jquery": "3.3.1",
     "jsbn": "1.1.0",
     "libsodium-wrappers": "^0.7.8",
