--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "read-last-lines": "1.3.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-promise-middleware": "6.1.0",
     "reselect": "4.0.0",
     "rimraf": "2.6.2",
