remove coverage unused

--- a/package.json
+++ b/package.json
@@ -20,18 +20,17 @@
     "start-swarm-test": "cross-env NODE_ENV=swarm-testing NODE_APP_INSTANCE=$MULTI electron .",
     "grunt": "grunt",
     "grunt:dev": "yarn clean-transpile; yarn grunt dev --force",
-    "icon-gen": "electron-icon-maker --input=images/session/session_icon_1024.png --output=./build",
+    "icon-gen": "cp images/session/session_icon_1024.png --output=./build/icon.png",
     "generate": "yarn icon-gen && yarn grunt --force",
     "build-release": "cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release",
     "build-module-protobuf": "pbjs --target static-module --wrap commonjs --out ts/protobuf/compiled.js protos/*.proto && pbts --out ts/protobuf/compiled.d.ts ts/protobuf/compiled.js --force-long",
-    "clean-module-protobuf": "rm -f ts/protobuf/compiled.d.ts ts/protobuf/compiled.js",
+    "clean-module-protobuf": "rimraf ts/protobuf/compiled.d.ts ts/protobuf/compiled.js",
     "build-protobuf": "yarn build-module-protobuf",
     "clean-protobuf": "yarn clean-module-protobuf",
     "test": "yarn test-node && yarn test-electron",
     "test-view": "NODE_ENV=test yarn run start",
     "test-lib-view": "NODE_ENV=test-lib yarn run start",
     "test-electron": "yarn grunt test",
-    "test-integration": "ELECTRON_DISABLE_SANDBOX=1 mocha --exit --full-trace --timeout 10000 ts/test/session/integration/integration_itest.js",
     "test-node": "mocha --recursive --exit --timeout 10000  test/app test/modules \"./ts/test/**/*_test.js\" ",
     "eslint-full": "eslint .",
     "lint-full": "yarn format-full && yarn lint-files-full",
@@ -181,7 +180,6 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-mocha": "4.12.1",
     "eslint-plugin-more": "0.3.1",
-    "extract-zip": "1.6.6",
     "grunt": "1.0.1",
     "grunt-cli": "1.2.0",
     "grunt-contrib-concat": "1.0.1",
@@ -196,12 +194,9 @@
     "mocha-testcheck": "1.0.0-rc.0",
     "node-gyp": "3.8.0",
     "node-sass-import-once": "1.2.0",
-    "nyc": "11.4.1",
     "postinstall-prepare": "^1.0.1",
     "prettier": "1.19.0",
     "qs": "6.5.1",
-    "react-docgen-typescript": "1.2.6",
-    "react-styleguidist": "7.0.1",
     "sinon": "9.0.2",
     "spectron": "^10.0.0",
     "ts-loader": "4.1.0",
@@ -322,7 +317,7 @@
       "!**/node_modules/*/build/**",
       "!**/*.{o,hprof,orig,pyc,pyo,rbc}",
       "!**/._*",
-      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,__pycache__,thumbs.db,.gitignore,.gitattributes,.editorconfig,.flowconfig,.yarn-metadata.json,.idea,appveyor.yml,.travis.yml,circle.yml,npm-debug.log,.nyc_output,yarn.lock,.yarn-integrity,.map}",
+      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,__pycache__,thumbs.db,.gitignore,.gitattributes,.editorconfig,.flowconfig,.yarn-metadata.json,.idea,appveyor.yml,.travis.yml,circle.yml,npm-debug.log,,yarn.lock,.yarn-integrity,.map}",
       "node_modules/spellchecker/build/Release/*.node",
       "node_modules/websocket/build/Release/*.node",
       "node_modules/socks/build/*.js",
