nodefetch headers as on mobile + cleanup worker code

--- a/bower.json
+++ b/bower.json
@@ -37,8 +37,7 @@
       "components/protobuf/**/*.js"
     ],
     "libloki": [
-      "node_modules/long/dist/long.js",
-      "components/JSBI/dist/jsbi.mjs"
+      "node_modules/long/dist/long.js"
     ]
   }
 }
