moved verifySignature of opengroup messages to a worker

--- a/.prettierignore
+++ b/.prettierignore
@@ -31,6 +31,7 @@ js/curve/**
 js/Mp3LameEncoder.min.js
 js/WebAudioRecorderMp3.js
 libtextsecure/libsignal-protocol.js
+js/util_worker.js
 libtextsecure/test/blanket_mocha.js
 test/blanket_mocha.js
 mnemonic_languages/**
