--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "main": "main.js",
   "scripts": {
-    "postinstall": "electron-builder install-app-deps && rimraf node_modules/dtrace-provider && husky install",
+    "postinstall": "electron-builder install-app-deps && rimraf node_modules/dtrace-provider",
     "start": "cross-env NODE_APP_INSTANCE=$MULTI electron .",
     "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
     "start-swarm-test": "cross-env NODE_ENV=swarm-testing NODE_APP_INSTANCE=$MULTI electron .",
@@ -44,7 +44,6 @@
     "build:webpack:sql-worker": "cross-env NODE_ENV=production webpack -c webpack-sql-worker.config.ts"
   },
   "dependencies": {
-    "@journeyapps/sqlcipher": "https://github.com/Bilb/node-sqlcipher.git#98039b72e197171b69358b900bc179ffc22e1f32",
     "@reduxjs/toolkit": "^1.4.0",
     "@sindresorhus/is": "0.8.0",
     "abort-controller": "3.0.0",
@@ -62,6 +61,7 @@
     "config": "1.28.1",
     "country-code-lookup": "^0.0.19",
     "cross-env": "^6.0.3",
+    "curve25519-js": "^0.0.4",
     "dompurify": "^2.0.7",
     "electron-is-dev": "^1.1.0",
     "electron-localshortcut": "^3.2.1",
@@ -127,7 +127,6 @@
   "devDependencies": {
     "@types/backbone": "^1.4.2",
     "@types/better-sqlite3": "5.4.1",
-
     "@types/blueimp-load-image": "^2.23.8",
     "@types/buffer-crc32": "^0.2.0",
     "@types/bytebuffer": "^5.0.41",
@@ -193,7 +192,6 @@
     "grunt-exec": "3.0.0",
     "grunt-gitinfo": "0.1.7",
     "grunt-sass": "3.0.1",
-    "husky": "^5.1.1",
     "lint-staged": ">=10",
     "mocha": "4.1.0",
     "mocha-testcheck": "1.0.0-rc.0",
@@ -345,11 +343,6 @@
       "!dev-app-update.yml"
     ],
     "afterPack": "./build/afterPackHook.js"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{css,js,json,scss,ts,tsx}": "prettier --write",
