--- a/package.json
+++ b/package.json
@@ -85,8 +85,9 @@
     "mkdirp": "0.5.1",
     "moment": "2.21.0",
     "mustache": "2.3.0",
+    "nan": "2.14.2",
     "node-fetch": "2.3.0",
-    "node-sass": "4.9.3",
+    "node-sass": "6.0.1",
     "os-locale": "2.1.0",
     "p-retry": "^4.2.0",
     "pify": "3.0.0",
@@ -105,7 +106,7 @@
     "react-redux": "7.2.1",
     "react-toastify": "^6.0.9",
     "react-use": "^17.2.1",
-    "react-virtualized": "9.21.0",
+    "react-virtualized": "9.22.3",
     "read-last-lines": "1.3.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
@@ -213,7 +214,7 @@
     "webpack-dev-server": "3.11.2"
   },
   "engines": {
-    "node": "^10.19.0"
+    "node": "^14.16.0"
   },
   "build": {
     "appId": "com.loki-project.messenger-desktop",
