--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "react-toastify": "^6.0.9",
     "react-use": "^17.2.1",
     "react-virtualized": "9.22.3",
+    "react-window-infinite-loader": "^1.0.7",
     "read-last-lines": "1.3.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
