--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "start-swarm-test": "cross-env NODE_ENV=swarm-testing NODE_APP_INSTANCE=$MULTI electron .",
     "grunt": "grunt",
     "grunt:dev": "yarn clean-transpile; yarn grunt dev --force",
-    "icon-gen": "cp images/session/session_icon_1024.png ./build/icon.png",
-    "generate": "yarn icon-gen && yarn grunt --force",
+    "generate": "yarn grunt --force",
     "build-release": "cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release",
     "build-module-protobuf": "pbjs --target static-module --wrap commonjs --out ts/protobuf/compiled.js protos/*.proto && pbts --out ts/protobuf/compiled.d.ts ts/protobuf/compiled.js --force-long",
     "clean-module-protobuf": "rimraf ts/protobuf/compiled.d.ts ts/protobuf/compiled.js",
@@ -178,7 +177,6 @@
     "dashdash": "1.14.1",
     "electron": "8.2.0",
     "electron-builder": "22.8.0",
-    "electron-icon-maker": "0.0.3",
     "electron-notarize": "^0.2.0",
     "eslint": "4.14.0",
     "eslint-config-airbnb-base": "12.1.0",
@@ -227,7 +225,7 @@
     },
     "mac": {
       "category": "public.app-category.social-networking",
-      "icon": "build/icons/mac/icon.icns",
+      "icon": "build/icon.icns",
       "target": [
         "dmg",
         "zip"
@@ -249,7 +247,7 @@
       "asarUnpack": "node_modules/spellchecker/vendor/hunspell_dictionaries",
       "publisherName": "Loki Project",
       "verifyUpdateCodeSignature": false,
-      "icon": "build/icons/win/icon.ico",
+      "icon": "build/icon.ico",
       "target": [
         "nsis"
       ]
@@ -269,7 +267,7 @@
         "deb",
         "AppImage"
       ],
-      "icon": "build/icons/png"
+      "icon": "build/icon.icns"
     },
     "asarUnpack": [
       "ts/sql/mainWorker.bundle.js",
