build deb and appImage separately
this is to unsure that the afterpack hook is not called when building
the app deb package

--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Build linux production binaries
         if: runner.os == 'Linux'
-        run: $(yarn bin)/electron-builder --config.extraMetadata.environment=$SIGNAL_ENV --publish=never --config.directories.output=release
+        run: yarn build-release
 
       - name: Remove unpacked files
         run: |
