--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "grunt": "grunt",
     "grunt:dev": "yarn clean-transpile; yarn grunt dev --force",
     "generate": "yarn grunt --force",
-    "build-release": "cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release",
+    "build-release": "run-script-os",
+    "build-release-non-linux": "cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release",
+    "build-release:win32": "yarn build-release-non-linux",
+    "build-release:macos": "yarn build-release-non-linux",
+    "build-release:linux": "cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release && yarn sedtoAppImage && cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release; yarn sedtoDeb",
     "build-module-protobuf": "pbjs --target static-module --wrap commonjs --out ts/protobuf/compiled.js protos/*.proto && pbts --out ts/protobuf/compiled.d.ts ts/protobuf/compiled.js --force-long",
     "clean-module-protobuf": "rimraf ts/protobuf/compiled.d.ts ts/protobuf/compiled.js",
     "build-protobuf": "yarn build-module-protobuf",
@@ -40,7 +44,9 @@
     "transpile:watch": "tsc -w",
     "clean-transpile": "rimraf 'ts/**/*.js ts/*.js' 'ts/*.js.map' 'ts/**/*.js.map' && rimraf tsconfig.tsbuildinfo;",
     "ready": "yarn clean-transpile; yarn grunt && yarn lint-full && yarn test",
-    "build:webpack:sql-worker": "cross-env NODE_ENV=production webpack -c webpack-sql-worker.config.ts"
+    "build:webpack:sql-worker": "cross-env NODE_ENV=production webpack -c webpack-sql-worker.config.ts",
+    "sedtoAppImage": "sed -i 's/\"target\": \"deb\"/\"target\": \"AppImage\"/g' package.json",
+    "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \"deb\"/g' package.json"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
@@ -200,6 +206,7 @@
     "postinstall-prepare": "^1.0.1",
     "prettier": "1.19.0",
     "qs": "6.5.1",
+    "run-script-os": "^1.1.6",
     "sinon": "9.0.2",
     "spectron": "^10.0.0",
     "ts-loader": "4.1.0",
@@ -263,10 +270,7 @@
         "StartupWMClass": "Session"
       },
       "asarUnpack": "node_modules/spellchecker/vendor/hunspell_dictionaries",
-      "target": [
-        "deb",
-        "AppImage"
-      ],
+      "target": "deb",
       "icon": "build/icon.icns"
     },
     "asarUnpack": [
