--- a/package.json
+++ b/package.json
@@ -98,9 +98,9 @@
     "pify": "3.0.0",
     "protobufjs": "^6.9.0",
     "rc-slider": "^8.7.1",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-contexify": "5.0.0",
-    "react-dom": "16.8.3",
+    "react-dom": "^17.0.2",
     "react-emoji": "^0.5.0",
     "react-emoji-render": "^1.2.4",
     "react-h5-audio-player": "^3.2.0",
@@ -112,7 +112,6 @@
     "react-toastify": "^6.0.9",
     "react-use": "^17.2.1",
     "react-virtualized": "9.22.3",
-    "react-window-infinite-loader": "^1.0.7",
     "read-last-lines": "1.3.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
@@ -158,8 +157,8 @@
     "@types/pify": "3.0.2",
     "@types/qs": "6.5.1",
     "@types/rc-slider": "^8.6.5",
-    "@types/react": "16.8.5",
-    "@types/react-dom": "16.8.2",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.2",
     "@types/react-mentions": "^4.1.1",
     "@types/react-mic": "^12.4.1",
     "@types/react-portal": "^4.0.2",
