--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "build-release-non-linux": "cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release",
     "build-release:win32": "yarn build-release-non-linux",
     "build-release:macos": "yarn build-release-non-linux",
-    "build-release:linux": "cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release && yarn sedtoAppImage && cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release; yarn sedtoDeb",
+    "build-release:linux": "yarn build-release-non-linux && yarn sedtoAppImage && yarn build-release-non-linux; yarn sedtoDeb",
+    "build-release-publish": "run-script-os",
+    "build-release-publish-non-linux": "cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=always --config.directories.output=release",
+    "build-release-publish:win32": "yarn build-release-publish-non-linux",
+    "build-release-publish:macos": "yarn build-release-publish-non-linux",
+    "build-release-publish:linux": "yarn build-release-publish-non-linux environment=production && yarn sedtoAppImage && build-release-publish-non-linux && yarn sedtoDeb",
     "build-module-protobuf": "pbjs --target static-module --wrap commonjs --out ts/protobuf/compiled.js protos/*.proto && pbts --out ts/protobuf/compiled.d.ts ts/protobuf/compiled.js --force-long",
     "clean-module-protobuf": "rimraf ts/protobuf/compiled.d.ts ts/protobuf/compiled.js",
     "build-protobuf": "yarn build-module-protobuf",
