--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "start": "cross-env NODE_APP_INSTANCE=$MULTI electron .",
     "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
     "start-prod2": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod2 electron .",
-    "start-swarm-test": "cross-env NODE_ENV=swarm-testing NODE_APP_INSTANCE=$MULTI electron .",
     "grunt": "grunt",
     "grunt:dev": "yarn clean-transpile; yarn grunt dev --force",
     "generate": "yarn grunt --force",
@@ -36,10 +35,7 @@
     "clean-module-protobuf": "rimraf ts/protobuf/compiled.d.ts ts/protobuf/compiled.js",
     "build-protobuf": "yarn build-module-protobuf",
     "clean-protobuf": "yarn clean-module-protobuf",
-    "test": "yarn test-node && yarn test-electron",
-    "test-view": "NODE_ENV=test yarn run start",
-    "test-lib-view": "NODE_ENV=test-lib yarn run start",
-    "test-electron": "yarn grunt test",
+    "test": "yarn test-node",
     "test-node": "mocha --recursive --exit --timeout 10000  test/app test/modules \"./ts/test/**/*_test.js\" ",
     "eslint-full": "eslint .",
     "lint-full": "yarn format-full && yarn lint-files-full",
@@ -213,7 +209,6 @@
     "qs": "6.5.1",
     "run-script-os": "^1.1.6",
     "sinon": "9.0.2",
-    "spectron": "^10.0.0",
     "ts-loader": "4.1.0",
     "ts-mock-imports": "^1.3.0",
     "tslint": "5.19.0",
