--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-promise-middleware": "^6.1.2",
     "reselect": "4.0.0",
     "rimraf": "2.6.2",
     "sanitize.css": "^12.0.1",
