--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "session-desktop",
   "productName": "Session",
   "description": "Private messaging from your desktop",
-  "version": "1.7.0",
+  "version": "1.7.1",
   "license": "GPL-3.0",
   "author": {
     "name": "Loki Project",
@@ -35,7 +35,7 @@
     "build-protobuf": "yarn build-module-protobuf",
     "clean-protobuf": "yarn clean-module-protobuf",
     "test": "yarn test-node",
-    "test-node": "mocha --recursive --exit --timeout 10000  test/app test/modules \"./ts/test/**/*_test.js\" ",
+    "test-node": "mocha --recursive --exit --timeout 10000  \"./ts/test/**/*_test.js\" ",
     "eslint-full": "eslint .",
     "lint-full": "yarn format-full && yarn lint-files-full",
     "lint-files-full": "yarn eslint-full && yarn tslint",
