--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "format-full": "prettier --list-different --write \"*.{css,js,json,scss,ts,tsx}\" \"./**/*.{css,js,json,scss,ts,tsx}\"",
     "transpile": "tsc --incremental",
     "transpile:watch": "tsc -w",
+    "integration-test": "mocha --recursive --exit --timeout 30000  \"./ts/test-integration/**/*.test.js\" \"./ts/test/*.test.js\"",
     "clean-transpile": "rimraf 'ts/**/*.js ts/*.js' 'ts/*.js.map' 'ts/**/*.js.map' && rimraf tsconfig.tsbuildinfo;",
     "ready": "yarn clean-transpile; yarn grunt && yarn lint-full && yarn test",
     "build:webpack:sql-worker": "cross-env NODE_ENV=production webpack -c webpack-sql-worker.config.ts",
@@ -133,6 +134,7 @@
     "uuid": "3.3.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.16.3",
     "@types/backbone": "^1.4.2",
     "@types/better-sqlite3": "5.4.1",
     "@types/blueimp-load-image": "^2.23.8",
@@ -202,6 +204,7 @@
     "mocha-testcheck": "1.0.0-rc.0",
     "node-gyp": "3.8.0",
     "node-sass-import-once": "1.2.0",
+    "playwright": "^1.16.3",
     "postinstall-prepare": "^1.0.1",
     "prettier": "1.19.0",
     "qs": "6.5.1",
