fix ringing sound for in release builds

--- a/package.json
+++ b/package.json
@@ -314,6 +314,7 @@
       "certificates/**",
       "images/**",
       "fonts/*",
+      "sound/*",
       "build/assets",
       "node_modules/**",
       "!node_modules/emoji-panel/dist/*",
