Fix attachment dl freeze (#2086)
* fix attachment download freezing app for some opengroups

* make registration page work with smaller height

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "better-sqlite3": "https://github.com/signalapp/better-sqlite3#ad0db5dd09c0ea4007b1c46bd4f7273827803347",
     "blob-util": "1.3.0",
     "blueimp-canvas-to-blob": "3.14.0",
-    "blueimp-load-image": "2.18.0",
+    "blueimp-load-image": "5.14.0",
     "buffer-crc32": "0.2.13",
     "bunyan": "1.8.12",
     "bytebuffer": "^5.0.1",
@@ -135,7 +135,7 @@
     "@playwright/test": "^1.16.3",
     "@types/backbone": "^1.4.2",
     "@types/better-sqlite3": "5.4.1",
-    "@types/blueimp-load-image": "^2.23.8",
+    "@types/blueimp-load-image": "5.14.4",
     "@types/buffer-crc32": "^0.2.0",
     "@types/bytebuffer": "^5.0.41",
     "@types/chai": "4.2.18",
