--- a/package.json
+++ b/package.json
@@ -212,7 +212,7 @@
     "tslint": "5.19.0",
     "tslint-microsoft-contrib": "6.0.0",
     "tslint-react": "3.6.0",
-    "typescript": "^4.2.3",
+    "typescript": "4.5.4",
     "webpack": "5.30.0",
     "webpack-cli": "4.6.0",
     "webpack-dev-server": "3.11.2"
