--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,7 @@
     // "typeRoots": [],                       // List of folders to include type definitions from.
     // "types": [],                           // Type declaration files to be included in compilation.
     // "allowSyntheticDefaultImports": true,  // Allow default imports from modules with no default export. This does not affect code emit, just typechecking.
+    "useUnknownInCatchVariables": false,
     "esModuleInterop": true // Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'.
     // "preserveSymlinks": true,              // Do not resolve the real path of symlinks.
 
