--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "postinstall": "electron-builder install-app-deps && rimraf node_modules/dtrace-provider",
     "start": "cross-env NODE_APP_INSTANCE=$MULTI electron .",
     "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
-    "grunt": "grunt",
+    "grunt": "yarn clean-transpile; grunt",
     "grunt:dev": "yarn clean-transpile; yarn grunt dev --force",
     "generate": "yarn grunt --force",
     "build-release": "run-script-os",
