--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ ts/protobuf/*.d.ts
 ts/**/*.js.map
 test/ts/**/*.js.map
 test/ts/**/*.js
+ts/test/automation/**/*.js
+ts/test/automation/**/*.js.map
 
 
 # Swapfiles
@@ -46,3 +48,6 @@ yarn-error.log
 .vscode/
 
 libloki/test/test.js
+
+playwright.config.js
+playwright.config.js.map
