move search logic to the search input component

--- a/package.json
+++ b/package.json
@@ -252,11 +252,7 @@
         "StartupWMClass": "Session"
       },
       "asarUnpack": "node_modules/spellchecker/vendor/hunspell_dictionaries",
-      "target": [
-        "deb",
-        "rpm",
-        "freebsd"
-      ],
+      "target": ["deb", "rpm", "freebsd"],
       "icon": "build/icon.icns"
     },
     "asarUnpack": [
