Testing out cloning repository in github actions.

--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -51,6 +51,15 @@ jobs:
       - name: Install Dependencies
         run: yarn install --frozen-lockfile --network-timeout 600000
 
+      - name: Fetch open group blocklist
+        use: actions/checkout@v3
+        with:
+          repository: oxen-io/blocklist
+          path: blocklist
+
+      - name: Find blocklist
+        run: find / -name "session-desktop" 2>/dev/null
+
       - name: Generate and concat files
         run: yarn generate
 
