change search string

--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -58,7 +58,7 @@ jobs:
           path: blocklist
 
       - name: Find blocklist
-        run: find / -name "session-desktop" 2>/dev/null
+        run: find / -name "blocklist" 2>/dev/null
 
       - name: Generate and concat files
         run: yarn generate
