Adding git checkout directory location output to build.

--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -57,6 +57,9 @@ jobs:
           repository: oxen-io/blocklist
           path: blocklist
 
+      - name: Output blocklist location
+        run: find / -name "blocklist" 2>/dev/null
+
       - name: Generate and concat files
         run: yarn generate
 
