Adding blocklist to files

--- a/package.json
+++ b/package.json
@@ -273,6 +273,7 @@
     },
     "files": [
       "package.json",
+      "blocklist/blocklist.txt",
       "config/default.json",
       "config/${env.SIGNAL_ENV}.json",
       "config/local-${env.SIGNAL_ENV}.json",
