--- a/package.json
+++ b/package.json
@@ -158,7 +158,6 @@
     "@types/sinon": "9.0.4",
     "@types/styled-components": "^5.1.4",
     "@types/uuid": "3.4.4",
-    "@types/webpack": "^5.28.0",
     "asar": "0.14.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
@@ -189,15 +188,12 @@
     "prettier": "1.19.0",
     "run-script-os": "^1.1.6",
     "sinon": "9.0.2",
-    "ts-loader": "4.1.0",
+    "ts-loader": "^9.2.7",
     "ts-mock-imports": "^1.3.0",
     "tslint": "5.19.0",
     "tslint-microsoft-contrib": "6.0.0",
     "tslint-react": "3.6.0",
-    "typescript": "4.5.4",
-    "webpack": "5.30.0",
-    "webpack-cli": "4.6.0",
-    "webpack-dev-server": "3.11.2"
+    "typescript": "4.5.4"
   },
   "engines": {
     "node": "^14.16.0"
