--- a/package.json
+++ b/package.json
@@ -80,7 +80,6 @@
     "ip2country": "1.0.1",
     "jquery": "3.3.1",
     "jsbn": "1.1.0",
-    "libsodium-wrappers": "^0.7.8",
     "libsodium-wrappers-sumo": "^0.7.9",
     "linkify-it": "3.0.2",
     "lodash": "4.17.11",
@@ -139,7 +138,6 @@
     "@types/filesize": "3.6.0",
     "@types/fs-extra": "5.0.5",
     "@types/jquery": "3.3.29",
-    "@types/libsodium-wrappers": "^0.7.8",
     "@types/libsodium-wrappers-sumo": "^0.7.5",
     "@types/linkify-it": "2.0.3",
     "@types/lodash": "4.14.106",
@@ -252,11 +250,7 @@
         "StartupWMClass": "Session"
       },
       "asarUnpack": "node_modules/spellchecker/vendor/hunspell_dictionaries",
-      "target": [
-        "deb",
-        "rpm",
-        "freebsd"
-      ],
+      "target": [ "deb", "rpm", "freebsd" ],
       "icon": "build/icon-linux.icns"
     },
     "asarUnpack": [
