--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -63,9 +63,7 @@ jobs:
       - name: Lint Files
         if: runner.os != 'Windows'
         run: |
-          yarn format-full
-          yarn eslint
-          yarn tslint
+          yarn lint-full
 
       - name: Make linux use en_US locale
         if: runner.os == 'Linux'
