--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
   "main": "main.js",
   "scripts": {
     "postinstall": "electron-builder install-app-deps && rimraf node_modules/dtrace-provider",
-    "start": "cross-env NODE_APP_INSTANCE=$MULTI electron .",
     "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
     "grunt": "yarn clean-transpile && grunt",
-    "grunt:dev": "yarn clean-transpile; yarn grunt dev --force",
     "generate": "yarn grunt --force",
     "build-release": "run-script-os",
     "build-release-non-linux": "cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release",
@@ -26,26 +24,20 @@
     "build-release:macos": "yarn build-release-non-linux",
     "build-release:linux": "yarn sedtoDeb; yarn build-release-non-linux && yarn sedtoAppImage && yarn build-release-non-linux && yarn sedtoDeb",
     "build-release-publish": "run-script-os",
-    "build-release-publish-non-linux": "$(yarn bin)/electron-builder --config.extraMetadata.environment=$SIGNAL_ENV --publish=always",
+    "build-release-publish-non-linux": "cross-env SIGNAL_ENV=production $(yarn bin)/electron-builder --config.extraMetadata.environment=$SIGNAL_ENV --publish=always",
     "build-release-publish:win32": "yarn build-release-publish-non-linux",
     "build-release-publish:macos": "yarn build-release-publish-non-linux",
     "build-release-publish:linux": "yarn sedtoDeb; yarn build-release-publish-non-linux && yarn sedtoAppImage && yarn build-release-publish-non-linux && yarn sedtoDeb",
-    "build-module-protobuf": "pbjs --target static-module --wrap commonjs --out ts/protobuf/compiled.js protos/*.proto && pbts --out ts/protobuf/compiled.d.ts ts/protobuf/compiled.js --force-long",
-    "clean-module-protobuf": "rimraf ts/protobuf/compiled.d.ts ts/protobuf/compiled.js",
-    "build-protobuf": "yarn build-module-protobuf",
-    "clean-protobuf": "yarn clean-module-protobuf",
-    "test": "yarn test-node",
-    "test-node": "mocha --recursive --exit --timeout 10000  \"./ts/test/**/*_test.js\" ",
-    "eslint-full": "eslint .",
-    "lint-full": "yarn format-full && yarn lint-files-full",
-    "lint-files-full": "yarn eslint-full && yarn tslint",
-    "tslint": "tslint --format stylish --project .",
+    "appImage": "yarn sedtoAppImage; yarn build-release-non-linux; yarn sedtoDeb",
+    "build-protobuf": "pbjs --target static-module --wrap commonjs --out ts/protobuf/compiled.js protos/*.proto && pbts --out ts/protobuf/compiled.d.ts ts/protobuf/compiled.js --force-long",
+    "test": "mocha --recursive --exit --timeout 10000  \"./ts/test/**/*_test.js\" ",
+    "lint-full": "yarn format-full && eslint . && tslint --format stylish --project .",
     "format-full": "prettier --list-different --write \"*.{css,js,json,scss,ts,tsx}\" \"./**/*.{css,js,json,scss,ts,tsx}\"",
     "transpile": "tsc --incremental",
     "transpile:watch": "yarn grunt  --force; tsc -w",
     "integration-test": "mocha --recursive --exit --timeout 30000  \"./ts/test-integration/**/*.test.js\" \"./ts/test/*.test.js\"",
     "clean-transpile": "rimraf 'ts/**/*.js' 'ts/*.js' 'ts/*.js.map' 'ts/**/*.js.map' && rimraf tsconfig.tsbuildinfo;",
-    "ready": "yarn clean-transpile; yarn grunt && yarn lint-full && yarn test",
+    "ready": "yarn grunt && yarn lint-full && yarn test",
     "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
     "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json"
   },
@@ -65,7 +57,6 @@
     "color": "^3.1.2",
     "config": "1.28.1",
     "country-code-lookup": "^0.0.19",
-    "cross-env": "^6.0.3",
     "curve25519-js": "^0.0.4",
     "dompurify": "^2.0.7",
     "electron-is-dev": "^1.1.0",
@@ -162,6 +153,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bytes": "^0.1.2",
+    "cross-env": "^6.0.3",
     "electron": "^13.6.2",
     "electron-builder": "22.8.0",
     "electron-notarize": "^0.2.0",
