cleanup constants.tsx file
and fixup commit id showing at the bottom in settings

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "scripts": {
     "postinstall": "electron-builder install-app-deps && rimraf node_modules/dtrace-provider",
     "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
-    "grunt": "yarn clean-transpile && grunt",
+    "grunt": "yarn clean-transpile  && grunt",
     "generate": "yarn grunt --force",
     "build-release": "run-script-os",
-    "build-release-non-linux": "cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release",
+    "build-release-non-linux": "yarn generate && cross-env SIGNAL_ENV=production electron-builder --config.extraMetadata.environment=production --publish=never --config.directories.output=release",
     "build-release:win32": "yarn build-release-non-linux",
     "build-release:macos": "yarn build-release-non-linux",
     "build-release:linux": "yarn sedtoDeb; yarn build-release-non-linux && yarn sedtoAppImage && yarn build-release-non-linux && yarn sedtoDeb",
@@ -33,9 +33,9 @@
     "test": "mocha --recursive --exit --timeout 10000  \"./ts/test/**/*_test.js\" ",
     "lint-full": "yarn format-full && eslint . && tslint --format stylish --project .",
     "format-full": "prettier --list-different --write \"*.{css,js,json,scss,ts,tsx}\" \"./**/*.{css,js,json,scss,ts,tsx}\"",
-    "transpile": "tsc --incremental",
-    "transpile:watch": "yarn grunt  --force; tsc -w",
-    "integration-test": "mocha --recursive --exit --timeout 30000  \"./ts/test-integration/**/*.test.js\" \"./ts/test/*.test.js\"",
+    "transpile": "tsc",
+    "transpile:watch": "yarn grunt --force; tsc -w",
+    "integration-test": "npx playwright test",
     "clean-transpile": "rimraf 'ts/**/*.js' 'ts/*.js' 'ts/*.js.map' 'ts/**/*.js.map' && rimraf tsconfig.tsbuildinfo;",
     "ready": "yarn grunt && yarn lint-full && yarn test",
     "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
