move logging.js to ts

--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "react-toastify": "^6.0.9",
     "react-use": "^17.2.1",
     "react-virtualized": "9.22.3",
-    "read-last-lines": "1.3.0",
+    "read-last-lines-ts": "^1.2.1",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-persist": "^6.0.0",
@@ -119,6 +119,7 @@
     "@types/better-sqlite3": "5.4.1",
     "@types/blueimp-load-image": "5.14.4",
     "@types/buffer-crc32": "^0.2.0",
+    "@types/bunyan": "^1.8.8",
     "@types/bytebuffer": "^5.0.41",
     "@types/chai": "4.2.18",
     "@types/chai-as-promised": "^7.1.2",
@@ -129,6 +130,7 @@
     "@types/electron-is-dev": "^1.1.1",
     "@types/emoji-mart": "^2.11.3",
     "@types/filesize": "3.6.0",
+    "@types/firstline": "^2.0.2",
     "@types/fs-extra": "5.0.5",
     "@types/jquery": "3.3.29",
     "@types/libsodium-wrappers-sumo": "^0.7.5",
