--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "type": "git",
     "url": "https://github.com/oxen-io/session-desktop.git"
   },
-  "main": "main.js",
+  "main": "dist/electron_main.js",
   "scripts": {
-    "postinstall": "electron-builder install-app-deps && rimraf node_modules/dtrace-provider",
+    "postinstall": "yarn patch-package && yarn electron-builder install-app-deps",
     "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
     "grunt": "yarn clean-transpile  && grunt",
     "generate": "yarn grunt --force",
@@ -41,19 +41,19 @@
     "sedtoAppImage": "sed -i 's/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/\"target\": \"AppImage\"/g' package.json",
     "sedtoDeb": "sed -i 's/\"target\": \"AppImage\"/\"target\": \\[\"deb\", \"rpm\", \"freebsd\"\\]/g' package.json",
     "build:webpack": "webpack --config ./webpack.config.js",
-    "start:webpack": "yarn build && electron ./dist/electron.js"
+    "start:webpack": "yarn build && electron ./dist/electron_main.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
     "abort-controller": "3.0.0",
     "auto-bind": "^4.0.0",
     "backbone": "1.3.3",
-    "better-sqlite3": "https://github.com/signalapp/better-sqlite3#ad0db5dd09c0ea4007b1c46bd4f7273827803347",
+    "better-sqlite3": "https://github.com/signalapp/better-sqlite3#4f66ee7b85477016dd0b2c3d2f13dcb60abd452e",
     "blob-util": "2.0.2",
     "blueimp-canvas-to-blob": "^3.29.0",
     "blueimp-load-image": "5.14.0",
     "buffer-crc32": "0.2.13",
-    "bunyan": "1.8.12",
+    "bunyan": "^1.8.15",
     "bytebuffer": "^5.0.1",
     "classnames": "2.2.5",
     "color": "^3.1.2",
@@ -116,7 +116,7 @@
   "devDependencies": {
     "@playwright/test": "^1.16.3",
     "@types/backbone": "^1.4.2",
-    "@types/better-sqlite3": "5.4.1",
+    "@types/better-sqlite3": "7.4.0",
     "@types/blueimp-load-image": "5.14.4",
     "@types/buffer-crc32": "^0.2.0",
     "@types/bunyan": "^1.8.8",
@@ -159,7 +159,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-bytes": "^0.1.2",
     "cross-env": "^6.0.3",
-    "electron": "^13.6.2",
+    "electron": "^17.1.2",
     "electron-builder": "22.8.0",
     "electron-notarize": "^0.2.0",
     "eslint": "4.14.0",
@@ -179,13 +179,17 @@
     "html-webpack-plugin": "^5.5.0",
     "mocha": "4.1.0",
     "mocha-testcheck": "1.0.0-rc.0",
+    "node-bindings-loader": "^1.5.0",
     "node-gyp": "3.8.0",
+    "node-loader": "^2.0.0",
     "node-sass-import-once": "1.2.0",
+    "patch-package": "^6.4.7",
     "playwright": "^1.16.3",
     "postinstall-prepare": "^1.0.1",
     "prettier": "1.19.0",
     "run-script-os": "^1.1.6",
     "sinon": "9.0.2",
+    "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.8",
     "ts-mock-imports": "^1.3.0",
     "tslint": "5.19.0",
@@ -196,7 +200,7 @@
     "webpack-cli": "^4.9.2"
   },
   "engines": {
-    "node": "^14.16.0"
+    "node": "16.13.0"
   },
   "build": {
     "appId": "com.loki-project.messenger-desktop",
