--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,6 @@
     // "allowSyntheticDefaultImports": true,  // Allow default imports from modules with no default export. This does not affect code emit, just typechecking.
     "useUnknownInCatchVariables": false,
     "esModuleInterop": true, // Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'.
-    "inlineSourceMap": true // Emit a single file with source maps instead of having a separate file.
+    "inlineSourceMap": false // Emit a single file with source maps instead of having a separate file.
   }
 }
