--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "dist/electron_main.js",
   "scripts": {
     "postinstall": "yarn patch-package && yarn electron-builder install-app-deps",
-    "start-prod": "cross-env NODE_ENV=production NODE_APP_INSTANCE=devprod$MULTI electron .",
+    "start-prod": "cross-env NODE_ENV=dev NODE_APP_INSTANCE=devprod$MULTI electron .",
     "grunt": "yarn clean-transpile  && grunt",
     "generate": "yarn grunt --force",
     "build-release": "run-script-os",
@@ -113,6 +113,10 @@
     "styled-components": "5.1.1",
     "uuid": "3.3.2"
   },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "devDependencies": {
     "@playwright/test": "^1.16.3",
     "@types/backbone": "^1.4.2",
@@ -138,6 +142,7 @@
     "@types/linkify-it": "2.0.3",
     "@types/lodash": "4.14.106",
     "@types/mocha": "5.0.0",
+    "@types/mustache": "^4.1.2",
     "@types/node-fetch": "^2.5.7",
     "@types/pify": "3.0.2",
     "@types/rc-slider": "^8.6.5",
@@ -162,6 +167,7 @@
     "electron": "^17.1.2",
     "electron-builder": "22.8.0",
     "electron-notarize": "^0.2.0",
+    "esbuild": "^0.14.29",
     "eslint": "4.14.0",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-config-prettier": "2.9.0",
@@ -287,7 +293,7 @@
       "stylesheets/*.css",
       "!js/register.js",
       "js/views/standalone_registration_view.js",
-      "preload.js",
+      "dist/preload.bundled.js",
       "about_preload.js",
       "settings_preload.js",
       "debug_log_preload.js",
