--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build-release-publish:linux": "yarn sedtoDeb; yarn build-release-publish-non-linux && yarn sedtoAppImage && yarn build-release-publish-non-linux && yarn sedtoDeb",
     "appImage": "yarn sedtoAppImage; yarn build-release-non-linux; yarn sedtoDeb",
     "build-protobuf": "pbjs --target static-module --wrap commonjs --out ts/protobuf/compiled.js protos/*.proto && pbts --out ts/protobuf/compiled.d.ts ts/protobuf/compiled.js --force-long",
-    "test": "mocha --recursive --exit --timeout 10000  \"./ts/test/**/*_test.js\" ",
+    "test": "mocha --globals=Worker -r jsdom-global/register --recursive --exit --timeout 10000  \"./ts/test/**/*_test.js\" ",
     "lint-full": "yarn format-full && eslint . && tslint --format stylish --project .",
     "format-full": "prettier --list-different --write \"*.{css,js,json,scss,ts,tsx}\" \"./**/*.{css,js,json,scss,ts,tsx}\"",
     "transpile": "tsc",
@@ -180,6 +180,8 @@
     "grunt-exec": "3.0.0",
     "grunt-gitinfo": "0.1.7",
     "grunt-sass": "3.0.1",
+    "jsdom": "^19.0.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "4.1.0",
     "mocha-testcheck": "1.0.0-rc.0",
     "node-bindings-loader": "^1.5.0",
