--- a/ts/node/tsconfig.json
+++ b/ts/node/tsconfig.json
@@ -1,6 +1,3 @@
-// {
-//   "extends": "../tsconfig.json",
-//   "compilerOptions": {
-//     "module": "esnext"
-//   }
-// }
+{
+  "extends": "../tsconfig.json"
+}
